1.完善BaseMapper,新增获取所有数据方法，以及根据主键ID删除数据的方法 2.修改插入方法以及批量插入方法，返回当前的id数据值 3.测试类新增相对应的单元测试方法